# biconical-inference

./: .gitignore  CLAUDE.md  MODEL_VALIDATION.md  NPE_BUILD_NOTES.md  README.md  SHERLOCK.md  SHERLOCK_2AP_EM.md  SHERLOCK_5PARAM.md  SPAXEL_MODEL_VALIDATION.md  SPAXEL_VS_1D.md  VEXP_INVESTIGATION.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py  core.py  home.py  plots.py  theme.py
checkpoints/: emulator.pt  emulator_2ap.pt  emulator_2ap_em.pt  emulator_5param.pt  emulator_baseline.pt  emulator_rvir6.pt  npe.pt  npe_2ap.pt  npe_5param.pt  npe_5param2ap.pt  npe_5param2ap_em.pt  npe_5param2ap_s1.pt  npe_5param2ap_s2.pt  npe_baseline.pt  npe_emulator.pt  npe_rvir6.pt  npe_rvir6_lib.pt  npe_spaxel6.pt  npe_spaxel6_v1.pt  npe_spaxel6m.pt  npe_spaxel7em.pt  recal_offset_spaxel6.json
configs/: 2ap.yaml  5param.yaml  5param2ap.yaml  5param2ap_big.yaml  5param2ap_em.yaml  5param2ap_em_big.yaml  default.yaml  pilot_2ap.yaml  pilot_2ap_em.yaml  pilot_mac.yaml  pilot_spaxel.yaml  pilot_spaxel_1m.yaml  rvir5_avfix.yaml  rvir6.yaml  sherlock.yaml  sherlock_2ap.yaml  sherlock_2ap_em.yaml  sherlock_5param.yaml  sherlock_spaxel.yaml  sherlock_spaxel_em.yaml  spaxel6.yaml  spaxel6m.yaml  spaxel7em.yaml  thor_sweep_mac.yaml
deploy/: holdout_2ap.npz  holdout_5param.npz  holdout_5param2ap_em.npz  holdout_default.npz  holdout_rvir6.npz  holdout_spaxel6m.npz  holdout_spaxel7em.npz
scripts/: baseline_metrics.py  check_gate.py  compare_npe.py  cube_vs_1d.py  derive_rvir_library.py  edge_calibration_audit.py  emulator_error_diag.py  eval_6dsweep.py  eval_retrained.py  example_fits.py  info_audit.py  make_constrained_design.py  make_cube_deploy_pack.py  make_deploy_packs.py  make_healpix_grid.py  npe_vs_mcmc.py  recal_offset.py  reextract_decomposed_sweep.py  run_pilot.sh  run_spaxel_pipeline.sh  sbatch_aggregate_spaxel.sh  sbatch_cube_sweep.sh  sbatch_library.sh  sbatch_pilot_spaxel.sh  sbatch_sherlock.sh  sbatch_sherlock_2ap.sh  sbatch_sherlock_2ap_em.sh  sbatch_sherlock_5param.sh  sbatch_sherlock_spaxel.sh  sbatch_sherlock_spaxel_em.sh  spaxel_attribution.py  spaxel_pilot_diag.py  systematics_flow.py  thor_cube_sweep.py  thor_sensitivity.py  validate_flow.py  validate_holdout.py
splits/: README.md  reserved_test.json  reserved_test_spaxel.json  reserved_test_spaxel_em.json
tests/: test_prior.py  (+14 more)
(+83 files in other folders)
